[#161417689] Updating the UI
Updating the UI after Implementing feedback.

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -23,7 +23,7 @@
 		<center>
 			<div id="inner-container">
 				<form method="post" action="admin_control_page">
-					<h1 id = "welcome-message"> Welcome</h1>
+					<h1 id = "welcome-message"> Welcome Admin</h1>
 					<table >
 						<tr>
 							<td >
