--- a/UI/cart.html
+++ b/UI/cart.html
@@ -14,8 +14,8 @@
         <nav class="navigation">
             <ul>
                 <div id="logo">Store-Manager</div>
-                <li><a href="sales.html">view sales record</a></li>
                 <li><a href="login.html">Logout</a></li>
+                <li><a href="sales.html">sales record</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="#" id="currentUser">
                         {attendant_name}</a></li>
