--- a/UI/admin_control_page.html
+++ b/UI/admin_control_page.html
@@ -24,6 +24,8 @@ form input[type=checkbox] {
 	width: 50px;
 }
 		
+
+
 	form input[type=number] {
 	border-radius: 5px;
 	font-size: 20px;
@@ -32,9 +34,9 @@ form input[type=checkbox] {
 }
 	 button[type=button] {
 	border-radius: 5px;
-	font-size: 12px;
+	font-size: 20px;
 	font-weight: 50;
-	padding: 5px 10px 5px 10px;
+	padding: 4px 15px 4px 15px;
 }
 	
 .pagination {
@@ -59,11 +61,11 @@ ul {
 
 li {
     float: left;
-	border: 1px solid aqua;
+	border: 1px solid white;
 	padding: 5px;
 	font-size: 20px;
 	margin-top: 5px;
-	color: aqua;
+	color: white;
 	background-color: #551263;
 }
 
@@ -89,8 +91,10 @@ li a {
 	<nav class="navigation">
 		<div class="tab">
 			<div id="logo">Store-Manager</div>
-			<a href="products.html"><button>Products</button></a>
 			<a href="login.html"><button>Logout</button></a>
+
+			<a href="products.html"><button>Products</button></a>
+			
 			<button class="tablinks" onclick="openCity(event, 'modify_product')">modify product</button>
 			<button class="tablinks" id="addProductTabButton" onclick="openCity(event, 'add_product')">add product</button>
 
@@ -103,106 +107,108 @@ li a {
 		<center>
 			<h3>Modify Product</h3>
 			<div>
-<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-		<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-		<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-	<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-		<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
-	<ul class="horizontal">
-  <li>Product Id</li>
-<li>Product Name</li>
-  <li>Unit-price</li>
-<li>Qty-Supplied</li>
-	<li>Date-of-supply</li>
-	<li>Supplier</li>
-		<button type="button">Edit</button>
-	<button type="button">Del</button>
-</ul>
+				<table id="productsrecordtable">
+				<tr class="horizontal">
+					<th>Product Id</th>
+				  <th>Product Name</th>
+					<th>Unit-price</th>
+				  <th>Qty-Supplied</th>
+					  <th>Date-of-supply</th>
+					  <th>Supplier</th>
+					  <td></td>
+					  <td></td>
+				  </tr>
+				  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+					  <td><button type="button" class="edit">Edit</button></td>
+					  <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+						   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+						   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+					   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+					   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+					  <td><button type="button" class="edit">Edit</button></td>
+					  <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+					   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+						   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+					  <tr class="horizontal">
+					<td>Product Id</td>
+				  <td>Product Name</td>
+					<td>Unit-price</td>
+				  <td>Qty-Supplied</td>
+					  <td>Date-of-supply</td>
+					  <td>Supplier</td>
+						   <td><button type="button" class="edit">Edit</button></td>
+					 <td><button type="button" class="del">Del</button></td>
+				  </tr>
+				</table>
 			<div class="pagination">
   <a href="#">&laquo;</a>
   <a href="#">1</a>
@@ -370,7 +376,7 @@ li a {
 								<label for="unit_price_add"> Unit Price:</label>
 							</td>
 							<td>
-								<input type="number" name="UnitPrice" id="unit_price_add" onkeypress="return isNumberKey(event)" placeholder="Input numbers only"
+								<input type="number" name="UnitPrice" id="unit_price_add" onkeypress="return isNumberKey(event)"
 								 required />
 							</td>
 						</tr>
@@ -408,7 +414,7 @@ li a {
 							</td>
 						</tr>
 					</table>
-					<button type="button" id="addProductSubmitButton">add product to catalogue</button>
+					<button type="button" id="addProductSubmitButton">Create Product</button>
 
 				</fieldset>
 
@@ -453,7 +459,7 @@ li a {
 								<label for="date_of_birth"> D.O.B:</label>
 							</td>
 							<td>
-								<input type="date" name="Date" id="date_of_birth" required />
+								<input type="date" name="date_of_birth" id="date_of_birth" required />
 							</td>
 						</tr>
 						<tr>
@@ -461,7 +467,7 @@ li a {
 								<label for="email"> Email:</label>
 							</td>
 							<td>
-								<input type="email" name="Email" id="email" required />
+								<input type="email" name="email" id="email" required />
 							</td>
 						</tr>
 						<tr>
@@ -469,7 +475,7 @@ li a {
 								<label for="password"> Password:</label>
 							</td>
 							<td>
-								<input type="password" name="Password" id="password" required />
+								<input type="password" name="password" id="password" required />
 							</td>
 						</tr>
 						<tr>
@@ -486,7 +492,7 @@ li a {
 								<label for="address"> Address:</label>
 							</td>
 							<td>
-								<input type="text" name="Address" id="address" required />
+								<input type="text" name="address" id="address" required />
 							</td>
 						</tr>
 
@@ -495,7 +501,7 @@ li a {
 								<label for="phone_number"> Phone Number:</label>
 							</td>
 							<td>
-								<input type="text" name="Number" id="phone_number" required />
+								<input type="text" name="phone" id="phone_number" required />
 							</td>
 						</tr>
 
@@ -504,7 +510,7 @@ li a {
 								<label for="country"> Country:</label>
 							</td>
 							<td>
-								<select required name="Country">
+								<select required name="country">
 									<option value="AF">Afghanistan</option>
 									<option value="AX">Åland Islands</option>
 									<option value="AL">Albania</option>
@@ -767,7 +773,7 @@ li a {
 								<label for="qualification"> Qualification:</label>
 							</td>
 							<td>
-								<input type="text" name="Qualification" id="qualification" required />
+								<input type="text" name="qualification" id="qualification" required />
 							</td>
 						</tr>
 
@@ -776,7 +782,7 @@ li a {
 								<label for="additional_skills"> Additional skills:</label>
 							</td>
 							<td>
-								<input type="text" name="Skills" id="additional_skills" required />
+								<input type="text" name="skills" id="additional_skills" required />
 							</td>
 						</tr>
 						<tr>
@@ -784,7 +790,7 @@ li a {
 								<label for="guarantor"> Guarantor:</label>
 							</td>
 							<td>
-								<input type="text" name="Guarantor" id="guarantor" required />
+								<input type="text" name="guarantor" id="guarantor" required />
 							</td>
 						</tr>
 						<tr>
@@ -792,7 +798,7 @@ li a {
 								<label for="guarantor"> Admin Privileges:</label>
 							</td>
 							<td>
-								<input type="checkbox" name="Admin" id="admin_privileges" required />
+								<input type="checkbox" name="admin" id="admin_privileges" required />
 							</td>
 						</tr>
 					</table>
