--- a/UI/login.html
+++ b/UI/login.html
@@ -19,7 +19,7 @@
 			<div id="inner-container">
 				
 				<form method="POST" action="cart.html">
-					<h1 id="welcome-message"> Welcome</h1>
+					<h1 id="welcome-message"> Welcome Attendant</h1>
 				  <table>
 					  <tr>
 							<td>
