--- a/UI/admin_control_page.html
+++ b/UI/admin_control_page.html
@@ -42,6 +42,7 @@ form input[type=checkbox] {
 	font-size: 20px;
 	font-weight: 50;
 	padding: 4px 15px 4px 15px;
+	margin-right: 20px;
 }
 	
 .pagination {
