--- a/UI/cart.html
+++ b/UI/cart.html
@@ -10,10 +10,8 @@
     <link rel="stylesheet" href="css/searchicon2.css">
 
     <style>
-
-    #cart_table{
-        padding: 15px;
-
+    #recordOfSales{
+        color: green;
     }
     </style>
     <script type="text/javascript" src="jwt-decode-master/build/jwt-decode.js"></script>
